--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlazorWebAssemblyApp1</title>
+
+    <!-- per esecuzione su localhost   <base href="/" />  -->
+    <!-- per esecuzione su GitHub   <base href="/web/" />  -->
     <base href="/web/" />
+
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
