--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- per esecuzione su localhost   <base href="/" />  -->
     <!-- per esecuzione su GitHub   <base href="/web/" />  -->
-    <base href="/web/" />
+    <base href="/" />
 
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
