--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <!-- per esecuzione su GitHub   <base href="/web/" />  -->
     <base href="/web/" />
 
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="BlazorWebAssemblyApp1.styles.css" rel="stylesheet" />
 
