--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="BlazorWebAssemblyApp1.styles.css" rel="stylesheet" />
+    <link href="BlazorApp-web-UploadFile.styles.css" rel="stylesheet" />
 
 
 
