--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlazorApp1</title>
     <base href="/web/" />
-    <link href="_framework/dotnet.0nzttowenk.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-VInDs7Pbe2n3czXxX5GB3u8BVfXIcNWFOPOj5qFsqSc=" />
+    <link href="_framework/dotnet.y87nleghtv.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-cvGLE27PqTgaTNW0zA3n6XasdPZ4OCd1m5nxii2YGe8=" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -14,20 +14,20 @@
     <script type="importmap">{
   "imports": {
     "./_framework/blazor.webassembly.js": "./_framework/blazor.webassembly.66stpp682q.js",
-    "./_framework/dotnet.js": "./_framework/dotnet.0nzttowenk.js",
     "./_framework/dotnet.native.js": "./_framework/dotnet.native.87vtjjdetb.js",
-    "./_framework/dotnet.runtime.js": "./_framework/dotnet.runtime.2tx45g8lli.js"
+    "./_framework/dotnet.runtime.js": "./_framework/dotnet.runtime.2tx45g8lli.js",
+    "./_framework/dotnet.js": "./_framework/dotnet.y87nleghtv.js"
   },
   "scopes": {},
   "integrity": {
     "./_framework/blazor.webassembly.66stpp682q.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
     "./_framework/blazor.webassembly.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
-    "./_framework/dotnet.0nzttowenk.js": "sha256-VInDs7Pbe2n3czXxX5GB3u8BVfXIcNWFOPOj5qFsqSc=",
-    "./_framework/dotnet.js": "sha256-VInDs7Pbe2n3czXxX5GB3u8BVfXIcNWFOPOj5qFsqSc=",
+    "./_framework/dotnet.js": "sha256-cvGLE27PqTgaTNW0zA3n6XasdPZ4OCd1m5nxii2YGe8=",
     "./_framework/dotnet.native.87vtjjdetb.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
     "./_framework/dotnet.native.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
     "./_framework/dotnet.runtime.2tx45g8lli.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco=",
-    "./_framework/dotnet.runtime.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco="
+    "./_framework/dotnet.runtime.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco=",
+    "./_framework/dotnet.y87nleghtv.js": "sha256-cvGLE27PqTgaTNW0zA3n6XasdPZ4OCd1m5nxii2YGe8="
   }
 }</script>
 </head>
