--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlazorApp1</title>
     <base href="/" />
-    <link href="_framework/dotnet.pqarbc2a4h.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-IaoBVXhWizJ8e2nD7oQVoOGFDV6IP4BrSBHSEr8wSOM=" />
+    <link href="_framework/dotnet.zffkoyjd2c.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-0SQXDuSPTZD6M2dIW/HUjzfL9hJeNoGphCw2n+MDIac=" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -15,19 +15,19 @@
   "imports": {
     "./_framework/blazor.webassembly.js": "./_framework/blazor.webassembly.66stpp682q.js",
     "./_framework/dotnet.native.js": "./_framework/dotnet.native.87vtjjdetb.js",
-    "./_framework/dotnet.js": "./_framework/dotnet.pqarbc2a4h.js",
-    "./_framework/dotnet.runtime.js": "./_framework/dotnet.runtime.2tx45g8lli.js"
+    "./_framework/dotnet.runtime.js": "./_framework/dotnet.runtime.2tx45g8lli.js",
+    "./_framework/dotnet.js": "./_framework/dotnet.zffkoyjd2c.js"
   },
   "scopes": {},
   "integrity": {
     "./_framework/blazor.webassembly.66stpp682q.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
     "./_framework/blazor.webassembly.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
-    "./_framework/dotnet.js": "sha256-IaoBVXhWizJ8e2nD7oQVoOGFDV6IP4BrSBHSEr8wSOM=",
+    "./_framework/dotnet.js": "sha256-0SQXDuSPTZD6M2dIW/HUjzfL9hJeNoGphCw2n+MDIac=",
     "./_framework/dotnet.native.87vtjjdetb.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
     "./_framework/dotnet.native.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
-    "./_framework/dotnet.pqarbc2a4h.js": "sha256-IaoBVXhWizJ8e2nD7oQVoOGFDV6IP4BrSBHSEr8wSOM=",
     "./_framework/dotnet.runtime.2tx45g8lli.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco=",
-    "./_framework/dotnet.runtime.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco="
+    "./_framework/dotnet.runtime.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco=",
+    "./_framework/dotnet.zffkoyjd2c.js": "sha256-0SQXDuSPTZD6M2dIW/HUjzfL9hJeNoGphCw2n+MDIac="
   }
 }</script>
 </head>
