--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlazorApp1</title>
     <base href="/web/" />
-    <link href="_framework/dotnet.zl9z8oeqbb.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-mRx+Dpwr5vWil1lxxDl8UZvP7I7Y3mzCS0OOY8AL7X4=" />
+    <link href="_framework/dotnet.iqsa7tewdo.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-BnX4bPSeh5mY6jGfO1n1kDfyC3efii4YbPzd7GF0Uas=" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -14,20 +14,20 @@
     <script type="importmap">{
   "imports": {
     "./_framework/blazor.webassembly.js": "./_framework/blazor.webassembly.66stpp682q.js",
+    "./_framework/dotnet.js": "./_framework/dotnet.iqsa7tewdo.js",
     "./_framework/dotnet.native.js": "./_framework/dotnet.native.87vtjjdetb.js",
-    "./_framework/dotnet.runtime.js": "./_framework/dotnet.runtime.2tx45g8lli.js",
-    "./_framework/dotnet.js": "./_framework/dotnet.zl9z8oeqbb.js"
+    "./_framework/dotnet.runtime.js": "./_framework/dotnet.runtime.2tx45g8lli.js"
   },
   "scopes": {},
   "integrity": {
     "./_framework/blazor.webassembly.66stpp682q.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
     "./_framework/blazor.webassembly.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
-    "./_framework/dotnet.js": "sha256-mRx+Dpwr5vWil1lxxDl8UZvP7I7Y3mzCS0OOY8AL7X4=",
+    "./_framework/dotnet.iqsa7tewdo.js": "sha256-BnX4bPSeh5mY6jGfO1n1kDfyC3efii4YbPzd7GF0Uas=",
+    "./_framework/dotnet.js": "sha256-BnX4bPSeh5mY6jGfO1n1kDfyC3efii4YbPzd7GF0Uas=",
     "./_framework/dotnet.native.87vtjjdetb.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
     "./_framework/dotnet.native.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
     "./_framework/dotnet.runtime.2tx45g8lli.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco=",
-    "./_framework/dotnet.runtime.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco=",
-    "./_framework/dotnet.zl9z8oeqbb.js": "sha256-mRx+Dpwr5vWil1lxxDl8UZvP7I7Y3mzCS0OOY8AL7X4="
+    "./_framework/dotnet.runtime.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco="
   }
 }</script>
 </head>
