--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -14,6 +14,87 @@
     <script type="importmap"></script>
 </head>
 
+
+<!-- (Obbligatorio per il toggle) -->
+
+<script>
+    window.previewObserver = (function () {
+        let observer = null;
+        let animated = false;
+        const seen = new Set();
+
+        function init() {
+            if (observer) return;
+            observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    const el = entry.target;
+                    if (!(el instanceof HTMLVideoElement)) return;
+
+                    if (!animated) { el.pause(); return; }
+
+                    if (entry.isIntersecting) {
+                        el.muted = true;
+                        el.loop = true;
+                        try { el.preload = 'auto'; } catch { }
+                        el.play().catch(() => { });
+                    } else {
+                        el.pause();
+                    }
+                });
+            }, {
+                root: null,
+                rootMargin: '100px 0px',
+                threshold: 0.25
+            });
+        }
+
+        function observe(el) {
+            if (!el || !el.id || seen.has(el.id)) return;
+            seen.add(el.id);
+            observer.observe(el);
+        }
+
+        function scan() {
+            init();
+            document.querySelectorAll('video[data-preview="1"]').forEach(observe);
+        }
+
+        function setAnimated(on) {
+            animated = !!on;
+            if (!animated) {
+                document.querySelectorAll('video[data-preview="1"]').forEach(v => v.pause());
+            } else {
+                document.querySelectorAll('video[data-preview="1"]').forEach(v => {
+                    const r = v.getBoundingClientRect();
+                    const h = window.innerHeight || document.documentElement.clientHeight;
+                    const inView = r.bottom >= 0 && r.top <= h;
+                    if (inView) {
+                        v.muted = true;
+                        v.loop = true;
+                        try { v.preload = 'auto'; } catch { }
+                        v.play().catch(() => { });
+                    }
+                });
+            }
+        }
+
+        function dispose() {
+            if (observer) { observer.disconnect(); observer = null; }
+            seen.clear();
+        }
+
+        return { init, scan, setAnimated, dispose };
+    })();
+</script>
+
+
+
+
+
+
+
+
+
 <body>
     <div id="app">
         <svg class="loading-progress">
