deploy: f887aae14671f873883e0371ad29d04509881155

--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlazorApp1</title>
     <base href="/" />
-    <link href="_framework/dotnet.yzjlrzser4.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-ggDg3iACnijdGxYIGCcpx6XJU3QNMN2pgHGBukLv3wc=" />
+    <link href="_framework/dotnet.v85hlb32yr.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-zyWzWqATG/Aj0NDW2qOtW+CQUePZJUrMNr7yYtn593s=" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -16,18 +16,18 @@
     "./_framework/blazor.webassembly.js": "./_framework/blazor.webassembly.66stpp682q.js",
     "./_framework/dotnet.native.js": "./_framework/dotnet.native.87vtjjdetb.js",
     "./_framework/dotnet.runtime.js": "./_framework/dotnet.runtime.2tx45g8lli.js",
-    "./_framework/dotnet.js": "./_framework/dotnet.yzjlrzser4.js"
+    "./_framework/dotnet.js": "./_framework/dotnet.v85hlb32yr.js"
   },
   "scopes": {},
   "integrity": {
     "./_framework/blazor.webassembly.66stpp682q.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
     "./_framework/blazor.webassembly.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
-    "./_framework/dotnet.js": "sha256-ggDg3iACnijdGxYIGCcpx6XJU3QNMN2pgHGBukLv3wc=",
+    "./_framework/dotnet.js": "sha256-zyWzWqATG/Aj0NDW2qOtW+CQUePZJUrMNr7yYtn593s=",
     "./_framework/dotnet.native.87vtjjdetb.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
     "./_framework/dotnet.native.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
     "./_framework/dotnet.runtime.2tx45g8lli.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco=",
     "./_framework/dotnet.runtime.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco=",
-    "./_framework/dotnet.yzjlrzser4.js": "sha256-ggDg3iACnijdGxYIGCcpx6XJU3QNMN2pgHGBukLv3wc="
+    "./_framework/dotnet.v85hlb32yr.js": "sha256-zyWzWqATG/Aj0NDW2qOtW+CQUePZJUrMNr7yYtn593s="
   }
 }</script>
 </head>
@@ -104,11 +104,6 @@
         return { init, scan, setAnimated, dispose };
     })();
 </script>
-
-
-
-
-
 
 
 
