deploy: c5aca077010733fa08ea5210e7c4404942a027f5

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlazorApp1</title>
     <base href="/web/" />
-    <link href="_framework/dotnet.v85hlb32yr.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-zyWzWqATG/Aj0NDW2qOtW+CQUePZJUrMNr7yYtn593s=" />
+    <link href="_framework/dotnet.5lw84pjmh9.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-B3H8tvVNkb3W4GfKGfyKgGV52LH28vYstmZmDhQ+e1U=" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -14,20 +14,20 @@
     <script type="importmap">{
   "imports": {
     "./_framework/blazor.webassembly.js": "./_framework/blazor.webassembly.66stpp682q.js",
+    "./_framework/dotnet.js": "./_framework/dotnet.5lw84pjmh9.js",
     "./_framework/dotnet.native.js": "./_framework/dotnet.native.87vtjjdetb.js",
-    "./_framework/dotnet.runtime.js": "./_framework/dotnet.runtime.2tx45g8lli.js",
-    "./_framework/dotnet.js": "./_framework/dotnet.v85hlb32yr.js"
+    "./_framework/dotnet.runtime.js": "./_framework/dotnet.runtime.2tx45g8lli.js"
   },
   "scopes": {},
   "integrity": {
     "./_framework/blazor.webassembly.66stpp682q.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
     "./_framework/blazor.webassembly.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
-    "./_framework/dotnet.js": "sha256-zyWzWqATG/Aj0NDW2qOtW+CQUePZJUrMNr7yYtn593s=",
+    "./_framework/dotnet.5lw84pjmh9.js": "sha256-B3H8tvVNkb3W4GfKGfyKgGV52LH28vYstmZmDhQ+e1U=",
+    "./_framework/dotnet.js": "sha256-B3H8tvVNkb3W4GfKGfyKgGV52LH28vYstmZmDhQ+e1U=",
     "./_framework/dotnet.native.87vtjjdetb.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
     "./_framework/dotnet.native.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
     "./_framework/dotnet.runtime.2tx45g8lli.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco=",
-    "./_framework/dotnet.runtime.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco=",
-    "./_framework/dotnet.v85hlb32yr.js": "sha256-zyWzWqATG/Aj0NDW2qOtW+CQUePZJUrMNr7yYtn593s="
+    "./_framework/dotnet.runtime.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco="
   }
 }</script>
 </head>
