--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlazorApp1</title>
     <base href="/web/" />
-    <link href="_framework/dotnet.cvve8d0pwm.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-2DSuJqmJZ3gja+WwkBz2sPermrdnMWPTlNat5ORVl6I=" />
+    <link href="_framework/dotnet.0ezio1akfa.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-qN/Z7/8uc3UbobBREwBe26cBTAsv8Dm1WvmYKv5GOvQ=" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -14,7 +14,7 @@
     <script type="importmap">{
   "imports": {
     "./_framework/blazor.webassembly.js": "./_framework/blazor.webassembly.66stpp682q.js",
-    "./_framework/dotnet.js": "./_framework/dotnet.cvve8d0pwm.js",
+    "./_framework/dotnet.js": "./_framework/dotnet.0ezio1akfa.js",
     "./_framework/dotnet.native.js": "./_framework/dotnet.native.87vtjjdetb.js",
     "./_framework/dotnet.runtime.js": "./_framework/dotnet.runtime.2tx45g8lli.js"
   },
@@ -22,8 +22,8 @@
   "integrity": {
     "./_framework/blazor.webassembly.66stpp682q.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
     "./_framework/blazor.webassembly.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
-    "./_framework/dotnet.cvve8d0pwm.js": "sha256-2DSuJqmJZ3gja+WwkBz2sPermrdnMWPTlNat5ORVl6I=",
-    "./_framework/dotnet.js": "sha256-2DSuJqmJZ3gja+WwkBz2sPermrdnMWPTlNat5ORVl6I=",
+    "./_framework/dotnet.0ezio1akfa.js": "sha256-qN/Z7/8uc3UbobBREwBe26cBTAsv8Dm1WvmYKv5GOvQ=",
+    "./_framework/dotnet.js": "sha256-qN/Z7/8uc3UbobBREwBe26cBTAsv8Dm1WvmYKv5GOvQ=",
     "./_framework/dotnet.native.87vtjjdetb.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
     "./_framework/dotnet.native.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
     "./_framework/dotnet.runtime.2tx45g8lli.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco=",
