--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>BlazorApp1</title>
     <!-- <base href="/web/" /> -->
     <base href="/web/" />
-    <link href="_framework/dotnet.7zd7xwqlvh.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-fZxSmEXs6CjDdsdyeGvr2GXYzhFGBC0ApdlbmFEhkWM=" />
+    <link href="_framework/dotnet.gt88t0zel4.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-pMv4dzqSsVYboxdy69y7PKRwNOO9ETLxKgcItYIsYyE=" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -15,7 +15,7 @@
     <script type="importmap">{
   "imports": {
     "./_framework/blazor.webassembly.js": "./_framework/blazor.webassembly.66stpp682q.js",
-    "./_framework/dotnet.js": "./_framework/dotnet.7zd7xwqlvh.js",
+    "./_framework/dotnet.js": "./_framework/dotnet.gt88t0zel4.js",
     "./_framework/dotnet.native.js": "./_framework/dotnet.native.87vtjjdetb.js",
     "./_framework/dotnet.runtime.js": "./_framework/dotnet.runtime.2tx45g8lli.js"
   },
@@ -23,8 +23,8 @@
   "integrity": {
     "./_framework/blazor.webassembly.66stpp682q.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
     "./_framework/blazor.webassembly.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
-    "./_framework/dotnet.7zd7xwqlvh.js": "sha256-fZxSmEXs6CjDdsdyeGvr2GXYzhFGBC0ApdlbmFEhkWM=",
-    "./_framework/dotnet.js": "sha256-fZxSmEXs6CjDdsdyeGvr2GXYzhFGBC0ApdlbmFEhkWM=",
+    "./_framework/dotnet.gt88t0zel4.js": "sha256-pMv4dzqSsVYboxdy69y7PKRwNOO9ETLxKgcItYIsYyE=",
+    "./_framework/dotnet.js": "sha256-pMv4dzqSsVYboxdy69y7PKRwNOO9ETLxKgcItYIsYyE=",
     "./_framework/dotnet.native.87vtjjdetb.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
     "./_framework/dotnet.native.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
     "./_framework/dotnet.runtime.2tx45g8lli.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco=",
