--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>BlazorApp1</title>
     <!-- <base href="/web/" /> -->
     <base href="/web/" />
-    <link href="_framework/dotnet.u3warxs6eg.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-9t9LF48pAWW9kB460X7Zy488v1hT6GxDjqp54KsPBfw=" />
+    <link href="_framework/dotnet.w0qrt5wxn2.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-gG235y0haakQ5sooxqfIKp/i+7xmsI2WZJLc1SY/0gM=" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -17,18 +17,18 @@
     "./_framework/blazor.webassembly.js": "./_framework/blazor.webassembly.66stpp682q.js",
     "./_framework/dotnet.native.js": "./_framework/dotnet.native.87vtjjdetb.js",
     "./_framework/dotnet.runtime.js": "./_framework/dotnet.runtime.2tx45g8lli.js",
-    "./_framework/dotnet.js": "./_framework/dotnet.u3warxs6eg.js"
+    "./_framework/dotnet.js": "./_framework/dotnet.w0qrt5wxn2.js"
   },
   "scopes": {},
   "integrity": {
     "./_framework/blazor.webassembly.66stpp682q.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
     "./_framework/blazor.webassembly.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
-    "./_framework/dotnet.js": "sha256-9t9LF48pAWW9kB460X7Zy488v1hT6GxDjqp54KsPBfw=",
+    "./_framework/dotnet.js": "sha256-gG235y0haakQ5sooxqfIKp/i+7xmsI2WZJLc1SY/0gM=",
     "./_framework/dotnet.native.87vtjjdetb.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
     "./_framework/dotnet.native.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
     "./_framework/dotnet.runtime.2tx45g8lli.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco=",
     "./_framework/dotnet.runtime.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco=",
-    "./_framework/dotnet.u3warxs6eg.js": "sha256-9t9LF48pAWW9kB460X7Zy488v1hT6GxDjqp54KsPBfw="
+    "./_framework/dotnet.w0qrt5wxn2.js": "sha256-gG235y0haakQ5sooxqfIKp/i+7xmsI2WZJLc1SY/0gM="
   }
 }</script>
 </head>
