Deploy: b6523bbda0eb90235fe23d32c9e45090f91e0555 b6523bbda0eb90235fe23d32c9e45090f91e0555

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <title>BlazorApp1</title>
     <!-- <base href="/web/" /> -->
     <base href="/web/" />
-    <link href="_framework/dotnet.kyyz7zvybl.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-vN7nt3PmYLR1GZqtCwXOSTtTsTWNpRBZZgZILKjyGnM=" />
+    <link href="_framework/dotnet.d4uq0kfyef.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-/VoouJQKsEghrHi6PZfLRMmQQUu0WJ4/WhXftkBE7Rs=" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -15,7 +15,7 @@
     <script type="importmap">{
   "imports": {
     "./_framework/blazor.webassembly.js": "./_framework/blazor.webassembly.66stpp682q.js",
-    "./_framework/dotnet.js": "./_framework/dotnet.kyyz7zvybl.js",
+    "./_framework/dotnet.js": "./_framework/dotnet.d4uq0kfyef.js",
     "./_framework/dotnet.native.js": "./_framework/dotnet.native.87vtjjdetb.js",
     "./_framework/dotnet.runtime.js": "./_framework/dotnet.runtime.2tx45g8lli.js"
   },
@@ -23,8 +23,8 @@
   "integrity": {
     "./_framework/blazor.webassembly.66stpp682q.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
     "./_framework/blazor.webassembly.js": "sha256-3lCWrko3zwspV40aQhs2S/IMkRSarnHRKIdkHhuXIBA=",
-    "./_framework/dotnet.js": "sha256-vN7nt3PmYLR1GZqtCwXOSTtTsTWNpRBZZgZILKjyGnM=",
-    "./_framework/dotnet.kyyz7zvybl.js": "sha256-vN7nt3PmYLR1GZqtCwXOSTtTsTWNpRBZZgZILKjyGnM=",
+    "./_framework/dotnet.d4uq0kfyef.js": "sha256-/VoouJQKsEghrHi6PZfLRMmQQUu0WJ4/WhXftkBE7Rs=",
+    "./_framework/dotnet.js": "sha256-/VoouJQKsEghrHi6PZfLRMmQQUu0WJ4/WhXftkBE7Rs=",
     "./_framework/dotnet.native.87vtjjdetb.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
     "./_framework/dotnet.native.js": "sha256-zE11fbcG2CeLl1Zi+NJgMOfWpdjuUWNte+icrtAO58I=",
     "./_framework/dotnet.runtime.2tx45g8lli.js": "sha256-2lZh9yO0fnzm3Xt7yV+Kox3DH3nK7L8hDhm84VT1xco=",
